fix(wizard.scss): spaceWizardsContainer invisible in 3d

--- a/src/components/Wizard/wizard.scss
+++ b/src/components/Wizard/wizard.scss
@@ -6,6 +6,7 @@
 .wtw_spaceWizardsContainer {
   position: relative;
   width: 100%;
+  transform-style: flat;
 }
 
 .wtw_spaceWizards {
